extract composite repo creation